welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:16: error: not found: value h
    marquer( T((h + decalage) % T.length))
                ^